--- a/StpViewer/StpViewer.csproj
+++ b/StpViewer/StpViewer.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\AnyCAD.Net.Pro.2020.0.1\build\net\AnyCAD.Net.Pro.props" Condition="Exists('..\packages\AnyCAD.Net.Pro.2020.0.1\build\net\AnyCAD.Net.Pro.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -13,6 +14,8 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -66,6 +69,15 @@
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AnyCAD.Exchange.Net, Version=20.0.7416.40275, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=AMD64">
+      <HintPath>..\packages\AnyCAD.Net.Pro.2020.0.1\lib\x64\AnyCAD.Exchange.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="AnyCAD.Foundation.Net, Version=20.0.7416.40273, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=AMD64">
+      <HintPath>..\packages\AnyCAD.Net.Pro.2020.0.1\lib\x64\AnyCAD.Foundation.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="AnyCAD.Presentation.Net, Version=20.0.7416.40275, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=AMD64">
+      <HintPath>..\packages\AnyCAD.Net.Pro.2020.0.1\lib\x64\AnyCAD.Presentation.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -99,6 +111,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -109,21 +122,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnyCAD.Control\AnyCAD.Presentation.csproj">
-      <Project>{587147AA-3C5F-4896-95F5-9D43FF4E5ECD}</Project>
-      <Name>AnyCAD.Presentation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AnyCAD.Exchange\AnyCAD.Exchange.csproj">
-      <Project>{36B599B0-7A42-408D-B4E2-60FB76B805B2}</Project>
-      <Name>AnyCAD.Exchange</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FoundationNet\Project\FoundationNet.vcxproj">
-      <Project>{3946A536-139B-4789-981B-787C45EF25DD}</Project>
-      <Name>AnyCAD.Foundation.Net</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\AnyCAD.Net.Pro.2020.0.1\build\net\AnyCAD.Net.Pro.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\AnyCAD.Net.Pro.2020.0.1\build\net\AnyCAD.Net.Pro.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
